# Cryptography-Project-2

./: .gitignore  CMakeLists.txt  README.md  graphs.py  hybrid.parquet  metrics.py  requirements.txt  server.py
include/: crypto_manager.h  csv_ingester.h  fhe_engine.h  parquet_handler.h  schema_parser.h  timer.h
src/: data.csv  main.cpp
src/core/: crypto_manager.cpp  csv_ingester.cpp  parquet_handler.cpp  schema_parser.cpp  simple_fhe_engine.cpp
static/: index.html
temp_data/: data.csv  fhe.keys  hybrid.parquet  hybrid_computed.parquet  schema.json  schema2.json
